# drf-auth

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py
books/: models.py  permissions.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_rename_author_book_owner.py
